--- a/jquery.spindle.css
+++ b/jquery.spindle.css
@@ -1,41 +1,48 @@
 .spindle-wrapper .spindle.spindle-active {
-  -webkit-animation-name: jquery-spindle;
-  -webkit-animation-duration: 750ms;
-  -webkit-animation-iteration-count: infinite;
-  -webkit-animation-timing-function: linear;
-
-  -moz-animation-name: jquery-spindle;
-  -moz-animation-duration: 750ms;
-  -moz-animation-iteration-count: infinite;
-  -moz-animation-timing-function: linear;
-
-  -o-animation-name: jquery-spindle;
-  -o-animation-duration: 750ms;
-  -o-animation-iteration-count: infinite;
-  -o-animation-timing-function: linear;
-
-  animation-name: jquery-spindle;
-  animation-duration: 750ms;
-  animation-iteration-count: infinite;
-  animation-timing-function: linear;
+  -webkit-animation: jquery-spindle 750ms infinite linear;
+  -moz-animation: jquery-spindle 750ms infinite linear;
+  -ms-animation: jquery-spindle 750ms infinite linear;
+  animation: jquery-spindle 750ms infinite linear;
 }
 
 @-webkit-keyframes jquery-spindle {
-  from {transform:rotate(0deg);}
-  to {transform:rotate(360deg);}
+  0% {-webkit-transform:rotate(0deg);}
+  0% {transform:rotate(0deg);}
+  50% {-webkit-transform:rotate(180deg);}
+  50% {transform:rotate(180deg);}
+  100% {-webkit-transform:rotate(360deg);}
+  100% {transform:rotate(360deg);}
 }
 
 @-moz-keyframes jquery-spindle {
-  from {transform:rotate(0deg);}
-  to {transform:rotate(360deg);}
+  0% {-moz-transform:rotate(0deg);}
+  0% {transform:rotate(0deg);}
+  50% {-moz-transform:rotate(1800deg);}
+  50% {transform:rotate(180deg);}
+  100% {-moz-transform:rotate(360deg);}
+  100% {transform:rotate(360deg);}
 }
 
 @-o-keyframes jquery-spindle {
-  from {transform:rotate(0deg);}
-  to {transform:rotate(360deg);}
+  0% {-o-transform:rotate(0deg);}
+  0% {transform:rotate(0deg);}
+  50% {-o-transform:rotate(180deg);}
+  50% {transform:rotate(180deg);}
+  100% {-o-transform:rotate(360deg);}
+  100% {transform:rotate(360deg);}
 }
 
 @keyframes jquery-spindle {
-  from {transform:rotate(0deg);}
-  to {transform:rotate(360deg);}
+  0% {-webkit-transform:rotate(0deg);}
+  0% {-moz-transform:rotate(0deg);}
+  0% {-ms-transform:rotate(0deg);}
+  0% {transform:rotate(0deg);}
+  50% {-webkit-transform:rotate(180deg);}
+  50% {-moz-transform:rotate(180deg);}
+  50% {-ms-transform:rotate(180deg);}
+  50% {transform:rotate(180deg);}
+  100% {-webkit-transform:rotate(360deg);}
+  100% {-moz-transform:rotate(360deg);}
+  100% {-ms-transform:rotate(360deg);}
+  100% {transform:rotate(360deg);}
 }
