--- a/jquery.spindle.css
+++ b/jquery.spindle.css
@@ -1,4 +1,5 @@
 .spindle-wrapper .spindle.spindle-active {
+  display: inline-block;
   -webkit-animation: jquery-spindle 750ms infinite linear;
   -moz-animation: jquery-spindle 750ms infinite linear;
   -ms-animation: jquery-spindle 750ms infinite linear;
