--- a/jquery.spindle.css
+++ b/jquery.spindle.css
@@ -1,48 +1,39 @@
 .spindle-wrapper .spindle.spindle-active {
+  display: inline-block;
   -webkit-animation: jquery-spindle 750ms infinite linear;
-  -moz-animation: jquery-spindle 750ms infinite linear;
-  -ms-animation: jquery-spindle 750ms infinite linear;
   animation: jquery-spindle 750ms infinite linear;
 }
 
 @-webkit-keyframes jquery-spindle {
-  0% {-webkit-transform:rotate(0deg);}
-  0% {transform:rotate(0deg);}
-  50% {-webkit-transform:rotate(180deg);}
-  50% {transform:rotate(180deg);}
-  100% {-webkit-transform:rotate(360deg);}
-  100% {transform:rotate(360deg);}
-}
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
 
-@-moz-keyframes jquery-spindle {
-  0% {-moz-transform:rotate(0deg);}
-  0% {transform:rotate(0deg);}
-  50% {-moz-transform:rotate(1800deg);}
-  50% {transform:rotate(180deg);}
-  100% {-moz-transform:rotate(360deg);}
-  100% {transform:rotate(360deg);}
-}
+  50% {
+    -webkit-transform: rotate(180deg);
+    transform: rotate(180deg);
+  }
 
-@-o-keyframes jquery-spindle {
-  0% {-o-transform:rotate(0deg);}
-  0% {transform:rotate(0deg);}
-  50% {-o-transform:rotate(180deg);}
-  50% {transform:rotate(180deg);}
-  100% {-o-transform:rotate(360deg);}
-  100% {transform:rotate(360deg);}
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
 }
 
 @keyframes jquery-spindle {
-  0% {-webkit-transform:rotate(0deg);}
-  0% {-moz-transform:rotate(0deg);}
-  0% {-ms-transform:rotate(0deg);}
-  0% {transform:rotate(0deg);}
-  50% {-webkit-transform:rotate(180deg);}
-  50% {-moz-transform:rotate(180deg);}
-  50% {-ms-transform:rotate(180deg);}
-  50% {transform:rotate(180deg);}
-  100% {-webkit-transform:rotate(360deg);}
-  100% {-moz-transform:rotate(360deg);}
-  100% {-ms-transform:rotate(360deg);}
-  100% {transform:rotate(360deg);}
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  50% {
+    -webkit-transform: rotate(180deg);
+    transform: rotate(180deg);
+  }
+
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
 }
